--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,6 +18,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee&family=Libre+Franklin:wght@600;800&family=Merriweather:ital@0;1&family=Montserrat:wght@400;500&family=Source+Sans+3:ital,wght@0,300;0,600;1,300;1,600&display=swap"
     rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/9b01273ebe.js" crossorigin="anonymous"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
